CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(glew-glhck)

# This is toggled from parent cmake
OPTION(GLEW_USE_GLES1 "Build GLEW with OpenGL ES 1.x support" OFF)
OPTION(GLEW_USE_GLES2 "Build GLEW with OpenGL ES 2.x support" OFF)

# Add definitions for GLES
IF (GLEW_USE_GLES1)
   ADD_DEFINITIONS(-DGLEW_INC_EGL)
   ADD_DEFINITIONS(-DGLEW_USE_LIB_ES11)
ELSEIF (GLEW_USE_GLES2)
   ADD_DEFINITIONS(-DGLEW_INC_EGL)
   ADD_DEFINITIONS(-DGLEW_USE_LIB_ES20)
ENDIF ()

IF (UNIX)
   FIND_LIBRARY(DL_LIBRARY dl)
   MARK_AS_ADVANCED(DL_LIBRARY)
   IF (DL_LIBRARY)
      SET(CMAKE_REQUIRED_LIBRARIES ${DL_LIBRARY})
   ELSE ()
      SET(CMAKE_REQUIRED_LIBRARIES "")
   ENDIF ()
ENDIF ()

ADD_DEFINITIONS(-DGLEW_NO_GLU -fPIC)
INCLUDE_DIRECTORIES(include)
ADD_LIBRARY(glew glew.c)
TARGET_LINK_LIBRARIES(glew ${DL_LIBRARY})
